<resources>
    <string name="app_name">Psykokoak</string>
    <string name="first_fragment_label" />
    <string name="second_fragment_label" />
    <string name="textview">TextView</string>
    <string name="spotify">Spotify</string>
    <string name="reddit">Reddit</string>
    <string name="github">Github</string>
    <string name="youtube">Youtube</string>
    <string name="gmail">Gmail</string>
    <string name="twitch">Twitch</string>
    <string name="services">Services</string>
    <string-array name="spinnerRoot">
        <item>Spotify</item>
        <item>Twitch</item>
        <item>Gmail</item>
        <item>Youtube</item>
        <item>Reddit</item>
        <item>Github</item>
    </string-array>

    <string-array name="spotify_services">
        <item>/addmusictofavorite</item>
    </string-array>

    <string-array name="twitch_services">
        <item>/followaccount</item>
        <item>/unfollowaccount</item>
    </string-array>

    <string-array name="gmail_services">
        <item>/sendamail</item>
        <item>/receiveamail</item>
        <item>/deleteamail</item>
    </string-array>

    <string-array name="youtube_services">
        <item>/likeavideo</item>
    </string-array>

    <string-array name="reddit_services">
        <item>/followasubreddit</item>
        <item>/unfollowasubreddit</item>
    </string-array>

    <string-array name="github_services">
        <item>/repoisstared</item>
    </string-array>


    <string-array name="spinnerSecond">
        <item>Spotify</item>
        <item>Gmail</item>
        <item>Reddit</item>
        <item>Youtube</item>
    </string-array>


    <string-array name="triggers_spotify">
        <item>/addlastlikedmusictoaplaylist</item>
    </string-array>

    <string-array name="triggers_gmail">
        <item>/deletelastmail</item>
    </string-array>

    <string-array name="triggers_youtube">
        <item>/addmusictoaplaylist</item>
    </string-array>

    <string-array name="triggers_reddit">
        <item>/likethefirstpostonyourfeed</item>
        <item>/postarandomurl</item>
    </string-array>
</resources>